added validator to graph2d, maybe also put it in groups?

--- a/examples/graph2d/04_rightAxis.html
+++ b/examples/graph2d/04_rightAxis.html
@@ -117,7 +117,7 @@
         dataAxis: {icons: true},
         start: '2014-06-10',
         end: '2014-07-04',
-        movable: false
+        moveable: false
     };
     var graph2d = new vis.Graph2d(container, dataset, groups, options);
 
