--- a/examples/graph2d/18_scatterplot.html
+++ b/examples/graph2d/18_scatterplot.html
@@ -42,8 +42,8 @@ var options = {
       sampling:false,
       style:'points',
       dataAxis: {
-          customRange: {
-              left: {
+          left: {
+              range: {
                   min: 300, max: 800
               }
           }
