--- a/test/timeline_groups.html
+++ b/test/timeline_groups.html
@@ -28,6 +28,8 @@
 
   </style>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+
   <script src="../dist/vis.js"></script>
   <link href="../dist/vis.css" rel="stylesheet" type="text/css" />
 <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-61231638-1', 'auto');ga('send', 'pageview');</script></head>
@@ -52,6 +54,7 @@
 <br>
 
 <div id="visualization"></div>
+<div style="height: 1000px;"></div><!-- for testing vertical scroll on touch devices-->
 
 <script>
   var moment = vis.moment;
@@ -189,9 +192,13 @@
     console.log('rangechanged', range);
   });
   */
-
+//
   timeline.on('click', function (props) {
     console.log('click', props);
+  });
+
+  $(container).click(function (event) {
+    console.log('click jquery', timeline.getEventProperties(event));
   });
 
   timeline.on('doubleClick', function (props) {
