--- a/examples/timeline/other/customTimeBars.html
+++ b/examples/timeline/other/customTimeBars.html
@@ -25,7 +25,7 @@
 </p>
 <p>
   <input type="button" id="remove" value="Remove custom vertical bar">
-  <input type="text" id="barIndex" value="1" placeholder="custom bar ID">
+  <input type="text" id="barIndex" value="t1" placeholder="custom bar ID">
 </p>
 <p>
   <code><strong>timechange</strong></code> event, index: <span id="timechangeBar"></span>, time: <span id="timechangeEvent"></span>
@@ -49,7 +49,7 @@
 
   // Set first time bar
   customDate = new Date(customDate.getFullYear(), customDate.getMonth(), customDate.getDate() + 1);
-  timeline.addCustomTime(customDate, '1');
+  timeline.addCustomTime(customDate, 't1');
 
   document.getElementById('add').onclick = function () {
     try {
