Renamed an example

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -136,7 +136,7 @@
       end: now.clone().add(1, 'days').add(1, 'minutes').toDate(),
       title: 'hello title!'
     },
-    {_id: 5, content: 'item 5', start: now.clone().add(9, 'days').toDate(), type:'point', title: 'hello title!'},
+    {_id: 5, content: 'item 5', start: now.clone().add(9, 'days').toDate(), type:'point', title: 'hello title!', className: 'special'},
     {_id: 6, content: 'item 6', start: now.clone().add(11, 'days').toDate()}
   ]);
 
