--- a/test/timeline.html
+++ b/test/timeline.html
@@ -137,7 +137,7 @@
       title: 'hello title!'
     },
     {_id: 5, content: 'item 5', start: now.clone().add(9, 'days').toDate(), type:'point', title: 'hello title!', className: 'special'},
-    {_id: 6, content: 'item 6', start: now.clone().add(11, 'days').toDate()}
+    {_id: 6, content: 'item 6 very long test bla bla bla', start: now.clone().add(11, 'days').toDate()}
   ]);
 
   var container = document.getElementById('visualization');
@@ -147,8 +147,8 @@
     editable: true,
     //orientation: 'top',
     orientation: 'both',
-    start: now.clone().add(-7, 'days'),
-    end: now.clone().add(7, 'days'),
+//    start: now.clone().add(-7, 'days'),
+//    end: now.clone().add(7, 'days'),
     //maxHeight: 200,
     //height: 200,
     showCurrentTime: true,
