Fixed #897: Timeline option `{snap: null}` did give a validation error

--- a/test/timeline.html
+++ b/test/timeline.html
@@ -162,6 +162,7 @@
         'hour':       'dddd D MMMM'
       }
     },
+    snap: null,
 //    timeAxis: {
 //      scale: 'hour',
 //      step: 2
