Added axis orientation option `'none'`

--- a/examples/timeline/styling/axisOrientation.html
+++ b/examples/timeline/styling/axisOrientation.html
@@ -25,6 +25,7 @@
   <select id="axis-orientation">
     <option value="both">both</option>
     <option value="bottom" selected>bottom</option>
+    <option value="none">none</option>
     <option value="top">top</option>
   </select>
 </p>
