--- a/test/timeline.html
+++ b/test/timeline.html
@@ -49,6 +49,7 @@
   <select id="orientation">
     <option value="both" selected>both</option>
     <option value="bottom">bottom</option>
+    <option value="none">none</option>
     <option value="top">top</option>
   </select>
 </p>
