--- a/test/timeline.html
+++ b/test/timeline.html
@@ -26,17 +26,17 @@
       background: rgba(255,0,0,0.5);
     }
 
-    #visualization .vis-grid.vis-vertical.odd {
+    #visualization .vis-grid.vis-vertical.vis-odd {
       background: #f5f5f5;
     }
 
-    #visualization .vis-grid.vis-vertical.saturday,
-    #visualization .vis-grid.vis-vertical.sunday {
+    #visualization .vis-grid.vis-vertical.vis-saturday,
+    #visualization .vis-grid.vis-vertical.vis-sunday {
       background: gray;
     }
 
-    #visualization .vis-text.saturday,
-    #visualization .vis-text.sunday {
+    #visualization .vis-text.vis-saturday,
+    #visualization .vis-text.vis-sunday {
       color: white;
     }
   </style>
