Point node.js "main"  file to the built ./dist/vis.min.js` (see #1180)

--- a/test/timeline_groups.html
+++ b/test/timeline_groups.html
@@ -221,7 +221,7 @@
     var logs = document.getElementById('logs');
     logs.innerHTML = msg + '<br>' + logs.innerHTML;
   }
-
+alert(1)
 </script>
 <div id="logs"></div>
 </body>
